# mcwm

./: .clang-format  README.md  meson.build
include/: config.h  events.h  helpers.h  list.h  wm_types.h
src/: helpers.c  list.c  mcwm.c
